--- a/java/src/main/resources/application.properties
+++ b/java/src/main/resources/application.properties
@@ -19,4 +19,4 @@ server.error.include-stacktrace=never
 server.port=9000
 
 # Google Maps API key
-google.maps.api.key=AIzaSyArFQYadwXP1Bwc1UAlOWchy34thjJBQ0w
+google.maps.api.key=xxxx
